WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92750
[WK2] Visible content rect update with null trajectory vector does not reach the backing store
https://bugs.webkit.org/show_bug.cgi?id=92750
Summary
[WK2] Visible content rect update with null trajectory vector does not reach ...
Andras Becsi
Reported
2012-07-31 07:21:22 PDT
[WK2] Visible content rect update with null trajectory vector does not reach the backing store
Attachments
Patch
(2.08 KB, patch)
2012-07-31 07:22 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2012-07-31 07:22:18 PDT
Created
attachment 155526
[details]
Patch
Andras Becsi
Comment 2
2012-07-31 07:24:45 PDT
(In reply to
comment #1
)
> Created an attachment (id=155526) [details] > Patch
Separated this part from the patch on
bug 90547
, since this is a different issue.
Jocelyn Turcotte
Comment 3
2012-07-31 07:38:10 PDT
Comment on
attachment 155526
[details]
Patch Thanks for fixing it.
Andras Becsi
Comment 4
2012-07-31 07:41:54 PDT
Comment on
attachment 155526
[details]
Patch Clearing flags on attachment: 155526 Committed
r124200
: <
http://trac.webkit.org/changeset/124200
>
Andras Becsi
Comment 5
2012-07-31 07:42:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug