[WK2] Visible content rect update with null trajectory vector does not reach the backing store https://bugs.webkit.org/show_bug.cgi?id=92750

Reviewed by Jocelyn Turcotte.

Make sure that notifications with a null trajectory vector reach the backing store
since a null vector means that all tiles around the viewport were requested.

* WebProcess/WebPage/LayerTreeCoordinator/LayerTreeCoordinator.cpp:
(WebKit::LayerTreeCoordinator::setVisibleContentsRect):

Canonical link: https://commits.webkit.org/110575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124200 268f45cc-cd09-0410-ab3c-d52691b4dbfc